--- a/ManuScript/refs.bib
+++ b/ManuScript/refs.bib
@@ -228,6 +228,17 @@ Educational Research},
    type = {Journal Article}
 }
 
+@article{Porter2018,
+   author = {Porter, Kristin E.},
+   title = {Statistical Power in Evaluations That Investigate Effects on Multiple Outcomes: A Guide for Researchers},
+   journal = {Journal of Research on Educational Effectiveness},
+   volume = {11},
+   issue  = {2},
+   pages = {267-295},
+   year = {2018},
+   type = {Journal Article}
+}
+
 @article{RN33097,
    author = {Ramsey, P.H.},
    title = {Power differences between pairwise multiple comparisons},
