--- a/ManuScript/PUMP_Manuscript.Rmd
+++ b/ManuScript/PUMP_Manuscript.Rmd
@@ -36,19 +36,51 @@ Topics to possibly discuss:
 
 <!-- KH comment: somewhere in intro, we need to make clear what setting we are in: multilevel RCTs-->
 
-Researchers are often interested in testing the effectiveness of an intervention on multiple outcomes, for multiple subgroups, at multiple points in time, or across multiple treatment groups. The resulting multiplicity of statistical hypothesis tests can lead to spurious findings of effects. Multiple testing procedures (MTPs) are statistical procedures that counteract this problem by adjusting p-values for effect estimates upward. When not using an MTP, the probability of false positive findings increases, sometimes dramatically, with the number of tests. When using an MTP, this probability is reduced.
+<!-- KH comment: we begin by discussing a bunch of things we will NOT solve, i.e. multile subgroups, multiple points in time, etc. Can we motivate instead but just focus on multiple outcomes? In general I feel we can have a more exciting hook!-->
+<!-- Researchers are often interested in testing the effectiveness of an intervention on multiple outcomes, for multiple subgroups, at multiple points in time, or across multiple treatment groups. The resulting multiplicity of statistical hypothesis tests can lead to spurious findings of effects. Multiple testing procedures (MTPs) are statistical procedures that counteract this problem by adjusting p-values for effect estimates upward. When not using an MTP, the probability of false positive findings increases, sometimes dramatically, with the number of tests. When using an MTP, this probability is reduced. -->
 
-However, an important consequence of MTPs is a change in statistical power that can be substantial. That is, the use of MTPs changes the probability of detecting effects when they truly exist, compared with the situation when the multiplicity problem is ignored. Unfortunately, while researchers are increasingly using MTPs, they frequently ignore the power implications of their use when designing studies. Consequently, in some cases sample sizes may be too small, and studies may be underpowered to detect effects as small as a desired size. In other cases, sample sizes may be larger than needed, or studies may be powered to detect smaller effects than anticipated.
+Researchers are often interested in testing the effectiveness of an intervention on multiple outcomes, for multiple subgroups, at multiple points in time, or across multiple treatment groups.
+The resulting multiplicity of statistical hypothesis tests can lead to spurious findings of effects.
+Multiple testing procedures (MTPs) are statistical procedures that counteract this problem by adjusting p-values for effect estimates; generally, $p$-values are adjusted upward to require a higher burden of proof.
+When not using an MTP, the probability of finding false positives increases, sometimes dramatically, with the number of tests.
+When using an MTP, this probability is reduced.
 
-Researchers typically worry that moving from one to multiple hypothesis tests and thus employing MTPs results in a loss of power. However, that need not always be the case. Power is indeed lost if one focuses on individual power — the probability of detecting an effect of a particular size or larger for each particular hypothesis test, given that the effect truly exists. However, in studies with multiplicity, alternative definitions of power exist and in some cases may be more appropriate (Chen, Luo, Liu, & Mehrotra, 2011; Dudoit, Shaffer, & Bodrick, 2003; Senn & Bretz, 2007; Westfall, Tobias, & Wolfinger, 2011).
+An important consequence of using a multiple testing procedure is that there can be a substantial change in the power of the test.
+That is, the use of MTPs changes the probability of detecting effects when they truly exist, compared with the situation when the multiplicity problem is ignored.
+Unfortunately, while researchers are increasingly using MTPs, they frequently ignore the power implications of their use when designing studies.
+Consequently, in some cases sample sizes may be too small, and studies may be underpowered to detect effects as small as a desired size.
+In other cases, sample sizes may be larger than needed, or studies may be powered to detect smaller effects than anticipated.
+
+Researchers typically worry that moving from one to multiple hypothesis tests, and thus employing MTPs, results in a loss of power. However, that pattern need not always be the case.
+Power is indeed lost if one focuses on individual power --- the probability of detecting an effect of a particular size or larger for each particular hypothesis test, given that the effect truly exists.
+However, in studies with multiplicity, alternative definitions of power exist, and in some cases may be more appropriate (Chen, Luo, Liu, & Mehrotra, 2011; Dudoit, Shaffer, & Bodrick, 2003; Senn & Bretz, 2007; Westfall, Tobias, & Wolfinger, 2011).
 
 <!-- KH comment: I would highlight this paragraph more, as it is something we return to throughout the paper. Right now, it seems like a side note. For example, you say one "might" consider complete power, as if we may choose not to in the future, but we do want to consider complete power! Is this worth making a bulleted list, or bolding each term, etc?-->
 
-For example, when testing for effects on multiple outcomes, one might consider 1-minimal power: the probability of detecting effects of at least a particular size (which can vary by outcome) on at least one outcome. Similarly, one might consider 1⁄2-minimal power: the probability of detecting effects of at least a particular size on at least 1⁄2 of the outcomes. Also, one might consider complete power: the power to detect effects of at least a particular size on all outcomes. The choice of definition of power depends on the objectives of the study and on how the success of the intervention is defined. The choice of definition also affects the overall extent of power.
+For example, when testing for effects on multiple outcomes, one might consider 1-minimal power: the probability of detecting effects of at least a particular size (which can vary by outcome) on at least one outcome.
+Similarly, one might consider $1⁄2$-minimal power: the probability of detecting effects of at least a particular size on at least 
+$1⁄2$ of the outcomes.
+Also, one might consider complete power: the power to detect effects of at least a particular size on all outcomes.
+<!-- KH comment: can we get more specific in the next sentence, i.e. provide examples of when we might want to measure success in different ways?.-->
+The choice of definition of power depends on the objectives of the study and on how the success of the intervention is defined.
+<!-- KH comment: the following sentence is vague, I'm not really sure what it is getting at.-->
+The choice of definition also affects the overall extent of power.
 
-The methodological developments implemented in our R package, PUMP, and described in this paper are focused on the multiplicity problem that arises in randomized control trials (RCT's) that test an intervention's impacts on a modest number of outcomes. For example, in education a researcher might design a trial to investigate the effects of a mentoring program on three outcomes related to social and emotional development --- measures of social competence, emotional competence and self-regulation. For this type of research, the literature and tools for estimating statistical power, or for estimating sample size requirements of minimum detectable effect sizes (MDES's) that achieve a desired level of statistical power, are extensive.^[For example, power estimating tools frequently used in social science research include @RN4473 Dong & Maynard, 2013; Hedges & Rhoads, 2010; Raudenbush et al., 2011; Spybrook et al., 2011).] However, to our knowledge, no tools exist that take multiplicity into account.
 
-The PUMP package fills this gap. It allows users to estimate statistical power, sample size requirements or MDES's for multiple definitions of statistical power, when applying any of five common MTPs --- Bonferroni, Holm, single-step and step-down versions of Westfall-Young, and Benjamini-Hochberg and when using any of the following RCT designs and estimation models: 
+This paper and the R package we introduce, PUMP, focus on estimating power for multilevel randomized control trials (RCTs) that test a single intervention's impacts on a modest number of outcomes.
+<!-- KH comment: feels like this example should be earlier. Maybe this whole paragraph should be earlier!-->
+For example, in education a researcher might design a trial to investigate the effects of a mentoring program on three outcomes related to social and emotional development --- measures of social competence, emotional competence and self-regulation.
+<!-- KH comment: what type of research?  social and emotional development research?-->
+<!-- KH comment: we need to check on whether JSS likes footnotes-->
+For this type of research, the literature and tools for estimating statistical power, sample size, and minimum detectable effect size are extensive.^[For example, power estimating tools frequently used in social science research include @RN4473 Dong & Maynard, 2013; Hedges & Rhoads, 2010; Raudenbush et al., 2011; Spybrook et al., 2011).]
+However, to our knowledge, no tools exist that take multiple outcomes into account.
+
+The PUMP package fills this gap.
+It allows users to estimate statistical power, sample size requirements, or minimum detectable effect sizes.
+The estimates can be calculated for multiple definitions of statistical power, MTPs, and RCT designs and models.
+The definitions of power are individual, complete, and relevant $d$-minimal powers, depending on the number of outcomes.
+The MTPs are Bonferroni, Holm, Benjamini-Hochberg, and single-step and step-down versions of Westfall-Young.
+The package supports any of the following RCT designs and estimation models: 
 
 <!-- KH COMMENT: might be worth reorganizing this table given our naming scheme, or is it replicating RCT designs section below?  Let's figure out best place to put this material-->
 
@@ -67,26 +99,48 @@ The PUMP package fills this gap. It allows users to estimate statistical power, 
 For details about the assumptions for each of the estimation models, see TODO. 
 
 
-
+<!-- KH comment: does frequentist need to be in the title?-->
 ## Review of the multiple testing problem in a frequentist framework 
 
-This paper focuses on the frequentist framework of hypothesis testing, as it is currently the prevailing framework in education and other social policy research.
-<!-- KH COMMENT: for non-education people, effect sizes might not be a familiar concept. Is this the right place to introduce it?-->
 
-In the frequentist framework, when framing impacts in terms of effect sizes, one typically tests a null hypothesis of no effect, $H0_m: ES_m = 0$, against an alternative hypothesis of $H1_m: ES_m \neq 0$ for a two-sided tests or $H1_m: ES_m > 0$ or $H1_m: ES_m < 0$ for a one-sided test.
+<!-- KH comment: do we need to motivate this more, or at least note that there are other options?-->
+This paper focuses on the frequentist framework of hypothesis testing, as it is currently the prevailing framework in education and other social policy research.
+
+<!-- KH COMMENT: motivate why we are going into this discussion, i.e. remind reader why we need these details in order to calculate power-->
+<!-- KH COMMENT: for non-education people, effect sizes might not be a familiar concept. Maybe this is the right place to introduce it?-->
+In the frequentist framework, when framing impacts in terms of effect sizes, one typically tests a null hypothesis of no effect, $H_{0_m}: ES_m = 0$, against an alternative hypothesis of $H_{1_m}: ES_m \neq 0$ for a two-sided tests or $H_{1_m}: ES_m > 0$ or $H1_m: ES_m < 0$ for a one-sided test.
 <!-- KH COMMENT: I don't think we've introduced either ES or m as notation yet. Maybe also a good place to denote $M$ as the total number of tests/outcomes.-->
-For the purposes of computing power researchers specify an alternative hypothesis of at least a particular effect size. For example, researchers may specify an ES of $0.125$.
+For the purposes of computing power researchers specify an alternative hypothesis of at least a particular effect size.
+For example, researchers may specify an ES of $0.125$.
 A significance test, such as a two-sided or one-sided t-test, is then conducted, and one obtains a test statistic given by
 
 \begin{equation}
 t_m = \frac{\hat{ES}_m}{SE(\hat{ES}_m)},
 \end{equation}
 
-from which a raw p-value is computed. Here, the term "raw" is used to distinguish this p-value from a p-value that has been adjusted for multiple hypothesis tests, as discussed below. The raw p-value is the probability of a test statistic being at least as extreme as the one observed, given that the null hypothesis is true. For a two-sided test, which is the focus of the discussion going forward (although the PUMP package also allows for one-sided tests), the raw p-value for the $m^{th}$ test is $p_m=2*Pr{T_m \geq |t_m|}$.^[For a one-sided test, depending on the direction of our alternative hypothesis, the raw p-value for the $m^{th}$ test is computed as $p_m=Pr{T_m \leq t_m}$ or $p_m=Pr{T_m \geq t_m}$.] This expression means we use our knowledge of the sampling distribution of the t-statistic, and we identify where our observed test statistic falls in that distribution when it is centered around zero.
+<!-- KH COMMENT: also introduct raw = unadjusted-->
 
-When testing a _single_ hypothesis under this framework (such effects are being assessed on just one outcome, so that $M=1$), researchers typically specify an acceptable maximum probability of making a Type I error, $\alpha$. A Type I error is the probability of erroneously rejecting the null hypothesis when it is true. The quantity $\alpha$ is also referred to as the significance level. If $\alpha=0.05$, then the null hypothesis is rejected if the p-value is less than $0.05$, and it is concluded that the intervention had an effect because there is less than a 5% chance that this finding is a false positive.
+from which a raw p-value is computed.
+Here, the term "raw" is used to distinguish this p-value from a p-value that has been adjusted using a procedure for multiple hypothesis tests, as discussed below.
+The raw p-value is the probability of a test statistic being at least as extreme as the one observed, given that the null hypothesis is true.
+<!-- KH COMMENT: I'm not sure if we currently actually allow for one-sided tests, do we want to?-->
+<!-- KH COMMENT: we have not defined capital $T_m$-->
+For a two-sided test, which is the focus of the discussion going forward (although the PUMP package also allows for one-sided tests), the raw p-value for test $m$ is $p_m=2*Pr(T_m \geq |t_m|)$.^[For a one-sided test, depending on the direction of our alternative hypothesis, the raw p-value for test $m$ is computed as $p_m=Pr(T_m \leq t_m)$ or $p_m=Pr(T_m \geq t_m)$.]
+<!-- KH COMMENT: I -->
+To calculate the raw $p$-value, we use our knowledge of the sampling distribution of the t-statistic, and we identify where our observed test statistic falls in that distribution.
 
-When one tests _multiple_ hypotheses under this framework (such that $M>1$) and one conducts a separate test for each of the hypotheses with $\alpha=0.05$ there is a _greater_ than $5\%$ chance of a false positive finding in the study. If the multiple tests are independent, the probability that at least one of the null hypothesis tests will be erroneously rejected is 1-Pr(none of the null hypotheses will be erroneously rejected) $= 1-(1-\alpha)^m$. Therefore, if researchers are estimating effects on three outcomes, if these outcomes are assumed independent, the probability of at least one false positive finding is $0.14$. If the researchers were instead estimating effects on five independent outcomes, the probability of at least one false positive finding is $0.23$. This Type I error inflation for independent outcomes demonstrates the crux of the multiple testing problem. In practice, however, the multiple outcomes are at least somewhat correlated, which makes the test statistics correlated and reduces the extent of Type I error inflation. Nonetheless, any error inflation can still make it problematic to draw reliable conclusions about the existence of effects. As introduced above, to counteract the multiple testing problem, MTPs adjust p-values upward.^[Alternatively, MTPs can decrease the critical values for rejecting hypothesis tests. For ease of presentation, this paper focuses only on the approach of increasing p-values.] The sections that follow will describe how the MTPs do so.
+<!--KH COMMENT: have we defined $M$ yet?-->
+When testing a _single_ hypothesis under this framework (such effects are being assessed on just one outcome, so that $M=1$), researchers typically specify an acceptable maximum probability of making a Type I error, $\alpha$.
+A Type I error is the probability of erroneously rejecting the null hypothesis when it is true.
+The quantity $\alpha$ is also referred to as the significance level. If $\alpha=0.05$, then the null hypothesis is rejected if the p-value is less than $0.05$, and it is concluded that the intervention had an effect because there is less than a $5$% chance that this finding is a false positive.
+
+When one tests _multiple_ hypotheses under this framework (such that $M>1$) and one conducts a separate test for each of the hypotheses with $\alpha=0.05$, there is a _greater_ than $5\%$ chance of a false positive finding in the study.
+If the multiple tests are independent, the probability that at least one of the null hypothesis tests will be erroneously rejected is 1-Pr(none of the null hypotheses will be erroneously rejected) $= 1-(1-\alpha)^m$.
+Therefore, if researchers are estimating effects on three outcomes, if these outcomes are assumed independent, the probability of at least one false positive finding is $0.14$.
+If the researchers were instead estimating effects on five independent outcomes, the probability of at least one false positive finding is $0.23$.
+This Type I error inflation for independent outcomes demonstrates the crux of the multiple testing problem.
+In practice, however, the multiple outcomes are usually at least somewhat correlated, which makes the test statistics correlated and reduces the extent of Type I error inflation.
+Nonetheless, any error inflation can still make it problematic to draw reliable conclusions about the existence of effects. As introduced above, to counteract the multiple testing problem, MTPs adjust p-values upward.^[Alternatively, MTPs can decrease the critical values for rejecting hypothesis tests. For ease of presentation, this paper focuses only on the approach of increasing p-values.] The sections that follow will describe how the MTPs do so.
 
 Recall that the power of an individual hypothesis test is the probability of rejecting a false null hypothesis of at least a specified size. If raw p-values are adjusted upward, one is less likely to reject the null hypotheses that are true (meaning there is truly no effect of at least a specified size), which reduces the probability of Type I errors, or false positive findings. Reducing this probability is the goal of MTPs. But if raw p-values are adjusted upward, one is also less likely to reject the null hypotheses that are false (meaning there truly is an effect of at least a specified size). There-fore, all MTPs reduce individual power (the power of separate hypothesis tests for each outcome) compared with the situation when no multiplicity adjustments are made or the situation when there is only one hypothesis test.
 
